--- a/webpages/index.html
+++ b/webpages/index.html
@@ -1,9 +1,6 @@
 <!doctype html>
-<title>test</title>
-<link href="data:image/x-icon;base64," rel="icon" type="image/x-icon" />
+<title>Hello World~!</title>
 
-<h1>test</h1>
-
-<p>A testing web page.</p>
-
-<a href="contact.html">contact us</a>
+<h1>Hello World</h1>
+<p>This is the hello world page.
+<p>Find out more <a href="about.html">about this site</a> 
